# Fundify

./: .dockerignore  .gitignore  .nvimlog  .trigger-deploy  ARCHITECTURE.md  BACKEND_DEPLOYMENT_FIX.md  CHECK_SUPABASE_NOW.md  CLEANUP_SUMMARY.md  CLIENT_ERROR_FIX.md  CLOUDINARY_SETUP.md  COMPLETE_FEATURE_LIST.md  CONSOLE_COMMANDS.md  CREATE_SAMPLE_TIERS.md  CREATE_TMIRAC_CREATOR.md  CREATORS_FEATURE_COMPLETE.md  CREATOR_PLATFORM_PLAN.md  Cargo.toml  DEBUG_MEDIA_NOW.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_INFO.md  DEPLOYMENT_STATUS.md  DEPLOY_STEPS.md  DEVELOPMENT_NOTES.md  DIAGNOSE_NOW.md  Dockerfile  FINAL_DEPLOYMENT_STEPS.md  FINAL_FIX.md  FINAL_FIXES.txt  FINAL_UPDATE_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIX_CHECKLIST.md  HOW_TO_SEE_YOYOYOY_CREATOR.md  LATEST_UPDATES.txt  MEDIA_FIX_SUMMARY.md  MEDIA_TROUBLESHOOTING.md  MIGRATION_COMMAND.txt  MIGRATION_INSTRUCTIONS.md  (+55 more)
backend-rs/: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV.md  README.md  docker-compose.yml  env.example  justfile  nixpacks.toml  railway.toml
backend-rs/.sqlx/: query-022d1d62cded463b457afcf2484848feb925037d8e293fed31c748118f3b51de.json  query-0458ba4c246c147dbfe1ec09015b0e9d8f891e30416e57da6df64197df8173e0.json  query-04f74d314e246451292a4a7e93b5f22aa0963a4406842f01d65f1aacbd4b210f.json  query-1dd1304fcc7002768f04f138b36315abe0c000692fd0c6285a1fb7272392768b.json  query-1e95be7dd9d650546181626a303b0ae71881df40f1b4f7ded30091e817d1027c.json  query-21c40615eafd94f9adb394090055ad0968b50906fa5819559fd015cb623cd1fb.json  query-22e262ca5a76356037b6a09943d131692b87d1afb5c71df23491b80d9a8e2169.json  query-24ffad323ddb23b0c3001cbdc61f941cf1e278b5fa0e403a1c65ee32d80b657e.json  query-26f93171b315d9211c00f2d6edbf67648f9815934245bf7afc27ccc8c3c3aaa8.json  query-27741cc65d642d1e73d8b954b7df60d1cfe88204f6d5d25abf6964a42c11d2b3.json  query-292e41269b8c66e4970c7b4c8c9a7a41627e34f1338431eb59d9d91eff057147.json  query-2c47fa534c1f668bf97d83f6b7706c69e3d276286c299483f4bb866f2f3e1c69.json  query-2cf7b09400243a779ad177ccd495674b90808114e53e3f802a67bf68b45304f0.json  query-35f27da5e153f91154f506298adf35981e84756ad7fc53d23e4b20f8648bd9a5.json  query-37e22611226047356270a10f7031beeab38f12079e926f97789260c4c50c3d54.json  query-3de3c7ee299d285ed626863ef004ed41b1b7e865a5b1c3e087ba6f4167f1a789.json  query-41f9c7ec3dc13db1dd911aa2f0a2e105bf7ae56a28fa56c84313da4a1cbed36b.json  query-444a7284a1a5c4202c553e8efe126de3847f6ef20d8c98334d970862db2ebb71.json  query-467ebda52ca86665af0c70e125d55adcb2e77d76e1979aec0264660f3386df63.json  query-4f81056c1e37e8cb4e812891a80139c46d5c0f377ed2bbab5c1724b4eb2fde8d.json  query-504fdf2e2ca072ddccbdb8f3673138cb6743c092a2f4c0281f0935ee1c934015.json  query-53abc4ef2148486088067c513512ae715bb22b1dbbeb0a6aab3355513c96253b.json  query-54e633df70036f4d1e8329e327b583864aea412780b49869a7a7e0e8efff0150.json  query-56321473081d932d68a20b51479ed5e5fb239ddb19f441eead41f8a266b260a1.json  query-57653f97e0456b661b800c9858b0fc182862132b55a614905923baaea71776b7.json  query-5d5fd4728beb726e392d213cd97c6a422a1fca553a35ed60016e955859e44a72.json  query-60adc7361afe74af244416d20de6e6fddf42fff46d2bf9da835700bf70366372.json  query-622f4ac0c67aa4941dcf7dc85b4c29ca4ed169913aeb4bc94a720eeb612ecb3f.json  query-6316504a6d01c68efb7b83a56859ec33c7b0b033eccd30136c10623759ecf972.json  query-64b26f62ea8d9c593a8188c10d6f82b21889974ce325a501fd4c541f6e6748c8.json  query-6799022b2f246446687f2a12206483668214beba679007debe519df84005135e.json  query-745c0e9f07b311c0a1f5574c3cf48e7b1a79a1dc6acb7570d12dfb1b0c20e1db.json  query-7f1a2e40a3dce738e1e2f6ab07647278d4f487d2d857bf06cf6c2221ddf3f1da.json  query-803f7b11826331e857eb4106cc3534ae4195c93ab0c16f25028238be930c3a04.json  query-82ab4f2ca4dfc3d23a00357c352d7a34e856f354586e28f987693e077011b744.json  query-84927de00334e20f9b4e48ae42f27af09ac0c196576d495440f579016af20060.json  query-84987a4351a9fcb662bf2cab838370bda2d3b442139d4b5dd4f931a7ffdeb9f8.json  query-8605fc67bb4e56e42afb93d34dce386f5add6e2b533106e7ae7016fcd3f7d2e0.json  query-8698e37381fb0a278c160aa54ad21685784a5f7724cc790e505fbb372e5d1c2f.json  query-8f79bb1f61654a9f3f711af84a97ce2a26de5b60c5cd68b0a54116e8006ef1f1.json  (+40 more)
backend-rs/migrations/: 001_initial_schema.sql  20250220120000_create_users_table.sql  20250220121000_create_campaigns_donations.down.sql  20250220124000_create_follows_table.down.sql  20250220124000_create_follows_table.sql  20250220130000_create_articles_tables.down.sql  20250220130000_create_articles_tables.sql  20250220132000_create_podcasts_table.down.sql  20250220132000_create_podcasts_table.sql  20250220133000_create_events_tables.sql  20250220134000_create_digital_products_tables.sql  20250220140000_create_comments_table.sql  20250220141000_create_polls_table.sql  20250220142000_create_feed_tables.down.sql  20250220142000_create_feed_tables.sql  20250220146000_create_uploads_table.down.sql  20250220147000_create_downloads_table.down.sql  20250220148000_create_post_engagement_tables.down.sql  20250220148000_create_post_engagement_tables.sql  20250220149000_create_referrals_table.down.sql  20250220150000_create_scheduled_posts_table.down.sql  20250220150000_create_scheduled_posts_table.sql
backend-rs/scripts/: migrate.sh
backend-rs/src/: config.rs  db.rs  (+7 more)
(+395 files in other folders)
