[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
sha2 = "0.10.9"
rand = "0.8.5"
base64 = "0.22.1"
futures = "0.3.31"
supabase_rs = { version = "0.4.16", features = ["storage"] }
bcrypt = "0.15.1"
dotenvy = "0.15.7"
heck = "0.5.0"
thiserror = "1.0.63"
oauth2 = "4.4.2"
hmac = "0.12.1"
validator = { version = "0.18.1", features = ["derive"] }
hex = "0.4.3"
stripe = "0.28.0"

[dev-dependencies]
tokio-test = "0.4.3"
tower = { version = "0.4.13", features = ["util"] }
