[package]
name = "backend-rs"
version = "0.1.0"
edition = "2021"

[features]
offline = []

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.7.9", features = ["macros", "json", "multipart"] }
base64 = "0.21.0"
bcrypt = "0.15.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
jsonwebtoken = "9.3.1"
oauth2 = "4.4.2"
rand = "0.8.5"
reqwest = { version = "0.12.24", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "macros", "postgres", "uuid", "chrono"] }
thiserror = "1.0.69"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
validator = { version = "0.18.1", features = ["derive"] }
