[package]
name = "fundify-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "bigdecimal", "migrate", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Authentication & Security
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["serde", "v4"] }

# Environment & Config
dotenvy = "0.15"

# Validation
validator = { version = "0.18", features = ["derive"] }

# HTTP Client (for Stripe, external APIs)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Big decimal for money
bigdecimal = { version = "0.4", features = ["serde"] }
